Changed section to position relative.  That fixed z-index.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -222,6 +222,8 @@ ul.banner-list {
 }
 
 section {
+  position: relative;
+
   h2, p {
     line-height: 1em;
   }
